--- a/.github/ISSUE_TEMPLATE/1-bug-report.en-US.yml
+++ b/.github/ISSUE_TEMPLATE/1-bug-report.en-US.yml
@@ -38,7 +38,7 @@ body:
     id: reproduce
     attributes:
       label: Reproduce link
-      description: "Please provide a URL of the repository that reproduces the problem. We recommend the [Rspack repro template](https://github.com/lynx-family/lynx-repro) for creating a minimal reproducible example."
+      description: "Please provide a URL of the repository that reproduces the problem. We recommend the [Lynx repro template](https://github.com/lynx-family/lynx-repro) for creating a minimal reproducible example."
       placeholder: paste link here
 
   - type: textarea
