--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,20 +1,21 @@
-# It is considered harmful to close issues or PRs, so our stale bot will never close an issue or PR.
-# To remove the stale label, just leave a new comment.
+name: "Close stale issues and PRs"
+on:
+  schedule:
+    - cron: "30 17 * * *"
 
-# Configuration for probot-stale - https://github.com/probot/stale
-staleLabel: "stale"
-daysUntilStale: 60
-daysUntilClose: false
-closeComment: false
-exemptLabels:
-  - "tracking issue"
-  - "awaiting more feedback"
-issues:
-  markComment: >
-    This issue has been automatically marked as stale because it has not had recent activity.
-    **If this issue is still affecting you, please leave any comment** (for example, "bump").
-    We are sorry that we haven't been able to prioritize it yet. If you have any new additional information, please include it with your comment!
-pulls:
-  markComment: >
-    This pull request has been automatically marked as stale because it has not had recent activity.
-    **If this pull request is still relevant, please leave any comment** (for example, "bump").
+jobs:
+  stale:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/stale@v9
+        with:
+          days-before-stale: 60
+          days-before-issue-close: -1
+          days-before-pr-close: -1
+          stale-issue-message: >
+            This issue has been automatically marked as stale because it has not had recent activity.
+            **If this issue is still affecting you, please leave any comment** (for example, "bump").
+            We are sorry that we haven't been able to prioritize it yet. If you have any new additional information, please include it with your comment!
+          stale-pr-message: >
+            This pull request has been automatically marked as stale because it has not had recent activity.
+            **If this pull request is still relevant, please leave any comment** (for example, "bump").
