--- a/packages/rspeedy/plugin-qrcode/package.json
+++ b/packages/rspeedy/plugin-qrcode/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.10.0",
+    "@ngrok/ngrok": "^1.4.1",
     "picocolors": "^1.1.1",
     "qrcode-terminal": "^0.12.0"
   },
