chore: unbind `@lynx-js/web-worker-rpc` version with lynx's web platform
This package supports cross-threads(web worker) rpc for lynx's web platform.

It's based on browser `MessagePort`.

Compare with vscode-jsonrpc, it have less package size, which is very important for Web Application.

Documents will be added later.

--- a/packages/web-platform/web-worker-rpc/package.json
+++ b/packages/web-platform/web-worker-rpc/package.json
@@ -20,5 +20,8 @@
     "Notice.txt",
     "CHANGELOG.md",
     "README.md"
-  ]
+  ],
+  "scripts": {
+    "api-extractor": "api-extractor run --verbose"
+  }
 }
