--- a/.github/workflows/web-report.yml
+++ b/.github/workflows/web-report.yml
@@ -7,6 +7,7 @@ name: Web Platform Report
       - package.json
       - pnpm-lock.yaml
       - "packages/web-platform/**"
+      - .github/workflows/web-report.yml
 permissions:
   contents: read
   pull-requests: write
