ci: integrate with CodSpeed

--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -53,6 +53,10 @@ jobs:
     secrets: inherit
     with:
       runs-on: lynx-ubuntu-24.04-xlarge
+  benchmark:
+    needs: build-all
+    uses: ./.github/workflows/workflow-bench.yml
+    secrets: inherit
   coverage:
     needs: build-all
     uses: ./.github/workflows/workflow-test.yml
