--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,11 @@ jobs:
     uses: ./.github/workflows/workflow-build.yml
     secrets: inherit
     with:
-      runs-on: lynx-ubuntu-24.04-medium
+      runs-on: lynx-ubuntu-24.04-xlarge
+  benchmark:
+    needs: build
+    uses: ./.github/workflows/workflow-bench.yml
+    secrets: inherit
   test-rspeedy:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
