--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
     uses: ./.github/workflows/workflow-build.yml
     secrets: inherit
     with:
-      runs-on: lynx-ubuntu-24.04-medium
+      runs-on: lynx-ubuntu-24.04-xlarge
   test-rspeedy:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
@@ -43,12 +43,6 @@ jobs:
         --no-cache
         --logHeapUsage
         --silent
-      files: |
-        package.json
-        pnpm-lock.yaml
-        vitest.config.ts
-        packages/rspeedy/**
-        .github/workflows/**
   test-react:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
@@ -65,12 +59,6 @@ jobs:
         --no-cache
         --logHeapUsage
         --silent
-      files: |
-        package.json
-        pnpm-lock.yaml
-        vitest.config.ts
-        packages/react/**
-        .github/workflows/**
   test-plugins:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
@@ -89,12 +77,6 @@ jobs:
         --no-cache
         --logHeapUsage
         --silent
-      files: |
-        package.json
-        pnpm-lock.yaml
-        vitest.config.ts
-        packages/webpack/**
-        .github/workflows/**
   playwright-linux:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
@@ -111,10 +93,3 @@ jobs:
     secrets: inherit
     with:
       runs-on: lynx-ubuntu-24.04-medium
-      files: |
-        **/*.rs
-        **/Cargo.toml
-        packages/react/transform/index.d.ts
-        .rustfmt.toml
-        rust-toolchain
-        .github/workflows/rust.yml
