--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,8 @@ on:
   pull_request:
     branches:
       - main
+  merge_group:
+    branches: [main]
 permissions:
   repository-projects: read
   contents: read
