--- a/.github/workflows/workflow-bench.yml
+++ b/.github/workflows/workflow-bench.yml
@@ -6,7 +6,7 @@ env:
   TURBO_TELEMETRY_DISABLED: 1
 jobs:
   nodejs-benchmark:
-    runs-on: lynx-ubuntu-24.04-xlarge
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
