--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -50,17 +50,18 @@ jobs:
       group: ${{ github.workflow }}
       cancel-in-progress: true
     uses: ./.github/workflows/workflow-build.yml
-    secrets: inherit
     with:
       runs-on: lynx-ubuntu-24.04-xlarge
   benchmark:
     needs: build-all
     uses: ./.github/workflows/workflow-bench.yml
-    secrets: inherit
+    secrets:
+      CODSPEED_TOKEN: ${{ secrets.CODSPEED_TOKEN }}
   coverage:
     needs: build-all
     uses: ./.github/workflows/workflow-test.yml
-    secrets: inherit
+    secrets:
+      CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
     with:
       runs-on: lynx-ubuntu-24.04-medium
       run: >
