fix: CODECOV_TOKEN is not required

--- a/.github/workflows/workflow-test.yml
+++ b/.github/workflows/workflow-test.yml
@@ -2,7 +2,7 @@ on:
   workflow_call:
     secrets:
       CODECOV_TOKEN:
-        required: true
+        required: false
     inputs:
       runs-on:
         required: true
