--- a/.github/workflows/workflow-bench.yml
+++ b/.github/workflows/workflow-bench.yml
@@ -2,7 +2,7 @@ on:
   workflow_call:
     secrets:
       CODSPEED_TOKEN:
-        required: false
+        required: true
 
 env:
   CI: 1
@@ -20,11 +20,19 @@ jobs:
           npm install -g corepack@latest
           corepack enable
           pnpm install --frozen-lockfile
+      - name: TurboCache
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          # We have to be strict here to make sure getting the cache of build-all
+          key: turbo-v3-${{ hashFiles('**/packages/**/src/**/*.rs') }}-${{ github.sha }}
       - name: Build
         run: |
-          pnpm build
-      - name: Run benchmark
+          pnpm turbo --filter @lynx-js/benchmark build
+      - name: Prepare CodSpeed
         run: |
           curl -fsSL https://github.com/CodSpeedHQ/runner/releases/download/v3.5.0/codspeed-runner-installer.sh | bash -s -- --quiet
+      - name: Run benchmark
+        run: |
           . "$HOME/.cargo/env"
-          codspeed run --token ${{ secrets.CODSPEED_TOKEN }} -- pnpm vitest bench
+          codspeed run --token ${{ secrets.CODSPEED_TOKEN }} -- pnpm --filter @lynx-js/benchmark run bench
