--- a/benchmark/package.json
+++ b/benchmark/package.json
@@ -12,7 +12,7 @@
     "@lynx-js/react": "workspace:*",
     "@lynx-js/react-rsbuild-plugin": "workspace:*",
     "@lynx-js/rspeedy": "workspace:*",
-    "@lynx-js/types": "3.2.0",
+    "@lynx-js/types": "^3.2.0",
     "@types/react": "^18.3.18"
   }
 }
