--- a/packages/web-platform/web-elements/package.json
+++ b/packages/web-platform/web-elements/package.json
@@ -100,6 +100,7 @@
     "**/*.css"
   ],
   "dependencies": {
+    "@lynx-js/web-constants": "workspace:*",
     "@lynx-js/web-elements-reactive": "workspace:*"
   },
   "devDependencies": {
