--- a/packages/web-platform/web-constants/tsconfig.json
+++ b/packages/web-platform/web-constants/tsconfig.json
@@ -5,6 +5,11 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "lib": ["ESNext"],
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "moduleResolution": "Node16",
+    "module": "Node16",
   },
   "include": ["src"],
   "references": [
