--- a/.github/workflows/pre-code-review-check.yml
+++ b/.github/workflows/pre-code-review-check.yml
@@ -3,13 +3,15 @@ name: pre-code-review-check
 on:
   pull_request:
     branches: ["main"]
+  merge_group:
+    types: [checks_requested]
 env:
   CI: 1
   GITHUB_BASE_REF: ${{ github.base_ref }}
   GITHUB_HEAD_REF: ${{ github.head_ref }}
   GITHUB_REF: ${{ github.ref }}
 concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: true
 jobs:
   code-style-check:
