github.base_ref is also empty for `merge_group` event

--- a/.github/workflows/pre-code-review-check.yml
+++ b/.github/workflows/pre-code-review-check.yml
@@ -7,7 +7,7 @@ on:
     types: [checks_requested]
 env:
   CI: 1
-  GITHUB_BASE_REF: ${{ github.base_ref }}
+  GITHUB_BASE_REF: ${{ github.base_ref || 'main' }}
   GITHUB_HEAD_REF: ${{ github.head_ref }}
   GITHUB_REF: ${{ github.ref }}
 concurrency:
