--- a/packages/webpack/template-webpack-plugin/package.json
+++ b/packages/webpack/template-webpack-plugin/package.json
@@ -47,9 +47,9 @@
     "@lynx-js/test-tools": "workspace:*",
     "@lynx-js/vitest-setup": "workspace:*",
     "@microsoft/api-extractor": "catalog:",
+    "@rspack/core": "catalog:rspack",
     "@types/css-tree": "^2.3.10",
-    "@types/object.groupby": "^1.0.4",
-    "webpack": "^5.98.0"
+    "@types/object.groupby": "^1.0.4"
   },
   "engines": {
     "node": ">=18"
