--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,30 @@ concurrency:
   group: ${{ github.event_name }}-${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: true
 jobs:
+  code-style-check:
+    runs-on: lynx-ubuntu-24.04-medium
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          # We need full history for changeset status check
+          fetch-depth: 0
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+      - name: Install
+        run: |
+          npm install -g corepack@latest
+          corepack enable
+          pnpm install --frozen-lockfile
+      - name: Code Style Check
+        run: |
+          pnpm dprint check
+          pnpm biome check
+      - name: API Check
+        run: pnpm turbo api-extractor
+      - name: Changeset Check
+        run: pnpm changeset status --since=origin/main
+
   build:
     uses: ./.github/workflows/workflow-build.yml
     secrets: inherit
