--- a/codecov.yml
+++ b/codecov.yml
@@ -6,7 +6,7 @@ coverage:
         threshold: "1%"
 
 fixes:
-  - "((home|Users)/.*/lynx-stack::"
+  - "/home/runner/_work/lynx-stack::"
 
 comment:
   layout: "header, diff, flags, components" # show component info in the PR comment
