ci: use `json` instead of `clover`

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,7 +66,7 @@ jobs:
         --outputFile=test-report.junit.xml
         --test-timeout=50000
         --coverage
-        --coverage.reporter='clover'
+        --coverage.reporter='json'
         --coverage.reporter='text'
         --no-cache
         --logHeapUsage
@@ -87,7 +87,7 @@ jobs:
         --reporter=dot
         --reporter=junit
         --outputFile=test-report.junit.xml
-        --coverage.reporter='clover'
+        --coverage.reporter='json'
         --coverage.reporter='text'
         --test-timeout=50000
         --no-cache
@@ -108,7 +108,7 @@ jobs:
         --reporter=junit
         --outputFile=test-report.junit.xml
         --coverage
-        --coverage.reporter='clover'
+        --coverage.reporter='json'
         --coverage.reporter='text'
         --no-cache
         --logHeapUsage
@@ -128,7 +128,7 @@ jobs:
         --reporter=junit
         --outputFile=test-report.junit.xml
         --coverage
-        --coverage.reporter='clover'
+        --coverage.reporter='json'
         --coverage.reporter='text'
         --no-cache
         --logHeapUsage
