--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -142,7 +142,7 @@ jobs:
       is-web: true
       run: |
         export NODE_OPTIONS="--max-old-space-size=32768"
-        pnpm --filter @lynx-js/web-tests run test
+        pnpm --filter @lynx-js/web-tests run test --reporter='github,dot,junit'
   test-rust:
     uses: ./.github/workflows/rust.yml
     secrets: inherit
