--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,6 +4,10 @@ on:
       runs-on:
         required: true
         type: string
+    secrets:
+      CODECOV_TOKEN:
+        required: true
+
 env:
   CI: 1
   TURBO_TELEMETRY_DISABLED: 1
@@ -18,13 +22,22 @@ jobs:
       - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           cache-key: test-${{ runner.os }}
-      - id: date
-        run: |
-          echo "month=$(date +%m)" >> $GITHUB_OUTPUT
-          echo "date=$(date +%d)" >> $GITHUB_OUTPUT
+      - name: Install cargo-deny
+        uses: taiki-e/install-action@03351cfd91ee8253b66020be1ad81991e6ba3502 # v2
+        with:
+          tool: cargo-llvm-cov,cargo-nextest
       - name: Test
         run: |
-          cargo test
+          cargo llvm-cov nextest --config-file .cargo/nextest.toml --lcov --output-path lcov.info
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   rustfmt:
     runs-on: lynx-ubuntu-24.04-medium
