fix: reduce test thread

--- a/.cargo/nextest.toml
+++ b/.cargo/nextest.toml
@@ -128,3 +128,6 @@ store-failure-output = true
 
 # This profile is activated if MIRI_SYSROOT is set.
 [profile.default-miri]
+
+[profile.ci]
+test-threads = 4
