--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -12,36 +12,27 @@ packages:
   - packages/webpack/*
   - packages/third-party/*
   - website
-
-# Default catalogs
 catalog:
-  "@microsoft/api-extractor": "7.51.1"
-
+  "@microsoft/api-extractor": 7.51.1
 catalogs:
-  # Rsbuild monorepo packages
   rsbuild:
-    "@rsbuild/core": "1.2.19"
-    "@rsbuild/webpack": "1.2.3"
-    "@rsbuild/plugin-less": "1.1.1"
-    "@rsbuild/plugin-sass": "1.2.2"
-    "@rsbuild/plugin-webpack-swc": "1.0.12"
-
-  # Rspack monorepo packages
+    "@rsbuild/core": 1.2.19
+    "@rsbuild/webpack": 1.2.3
+    "@rsbuild/plugin-less": 1.1.1
+    "@rsbuild/plugin-sass": 1.2.2
+    "@rsbuild/plugin-webpack-swc": 1.0.12
   rspack:
-    "@rspack/cli": "1.3.0-beta.0"
-    "@rspack/core": "1.3.0-beta.0"
-    "@rspack/test-tools": "1.3.0-beta.0"
-
+    "@rspack/cli": 1.3.0-beta.0
+    "@rspack/core": 1.3.0-beta.0
+    "@rspack/test-tools": 1.3.0-beta.0
 overrides:
-  "@rspack/core": "$@rspack/core"
-  "@rsbuild/core>@rspack/core": "$@rspack/core"
-
+  "@rspack/core": $@rspack/core
+  "@rsbuild/core>@rspack/core": $@rspack/core
 patchedDependencies:
-  "@napi-rs/cli@2.18.4": "patches/@napi-rs__cli@2.18.4.patch"
-  "@rollup/plugin-typescript": "patches/@rollup__plugin-typescript.patch"
-
+  "@napi-rs/cli@2.18.4": patches/@napi-rs__cli@2.18.4.patch
+  "@rollup/plugin-typescript": patches/@rollup__plugin-typescript.patch
 onlyBuiltDependencies:
+  - "@biomejs/biome"
+  - "@swc/core"
   - dprint
-
-ignoredBuiltDependencies:
-  - core-js
+  - esbuild
