--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,9 +1,5 @@
 on:
   workflow_call:
-    inputs:
-      runs-on:
-        required: true
-        type: string
     secrets:
       CODECOV_TOKEN:
         required: true
@@ -16,7 +12,7 @@ concurrency:
   cancel-in-progress: true
 jobs:
   test:
-    runs-on: ${{ inputs.runs-on }}
+    runs-on: lynx-ubuntu-24.04-xlarge
     steps:
       - uses: actions/checkout@v4
       - uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -28,7 +24,8 @@ jobs:
           tool: cargo-llvm-cov,cargo-nextest
       - name: Test
         run: |
-          cargo llvm-cov nextest --profile ci --config-file .cargo/nextest.toml --lcov --output-path lcov.info
+          export CARGO_LLVM_COV_FLAGS_NO_RUNNER='--no-sparse'
+          cargo llvm-cov nextest --profile ci --config-file .cargo/nextest.toml --lcov --output-path lcov.info  --release
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
