--- a/packages/react/transform/package.json
+++ b/packages/react/transform/package.json
@@ -26,6 +26,7 @@
     "!dist/*.node"
   ],
   "scripts": {
+    "bench": "vitest bench",
     "build:debug": "napi build --platform --js index.cjs",
     "build:wasm": "node ./scripts/build_wasm.js",
     "test": "vitest",
