test: exclude bench.js from coverage

--- a/packages/react/transform/package.json
+++ b/packages/react/transform/package.json
@@ -29,7 +29,7 @@
     "bench": "vitest bench",
     "build:debug": "napi build --platform --js index.cjs",
     "build:wasm": "node ./scripts/build_wasm.js",
-    "test": "vitest",
+    "test": "vitest --coverage",
     "test:cargo": "cargo test"
   },
   "devDependencies": {
