--- a/.github/workflows/workflow-bench.yml
+++ b/.github/workflows/workflow-bench.yml
@@ -4,11 +4,20 @@ on:
       CODSPEED_TOKEN:
         required: true
 
+# Allow read CodSpeed token from forked PR.
+permissions:
+  pull-requests: write
+
 env:
   CI: 1
   TURBO_TELEMETRY_DISABLED: 1
 jobs:
   nodejs-benchmark:
+    # CodSpeed does not support merge_group event.
+    #
+    # Error: Event merge_group is not supported by CodSpeed
+    # Error: unknown variant `merge_group`, expected one of `push`, `pull_request`, `workflow_dispatch`, `schedule`, `local` at line 1 column 13
+    if: github.event_name != 'merge_group'
     runs-on: lynx-ubuntu-24.04-xlarge
     steps:
       - uses: actions/checkout@v4
