--- a/.github/workflows/workflow-bench.yml
+++ b/.github/workflows/workflow-bench.yml
@@ -1,12 +1,5 @@
 on:
   workflow_call:
-    secrets:
-      CODSPEED_TOKEN:
-        required: true
-
-# Allow read CodSpeed token from forked PR.
-permissions:
-  pull-requests: write
 
 env:
   CI: 1
@@ -44,4 +37,4 @@ jobs:
       - name: Run benchmark
         run: |
           . "$HOME/.cargo/env"
-          codspeed run --token ${{ secrets.CODSPEED_TOKEN }} -- pnpm -r run bench
+          codspeed run -- pnpm -r run bench
