refactor: remove cSpell disable comments for debugIds in source map configurations and use cspell.jsonc

--- a/cspell.jsonc
+++ b/cspell.jsonc
@@ -109,6 +109,7 @@
     "worklet",
     "xlarge",
     "PAPI", // Lynx's Element PAPI
+    "debugids", // https://getsentry.github.io/debugids/
   ],
   // Glob
   "ignorePaths": [
