--- a/packages/webpack/chunk-loading-webpack-plugin/package.json
+++ b/packages/webpack/chunk-loading-webpack-plugin/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@lynx-js/test-tools": "workspace:*",
+    "@lynx-js/vitest-setup": "workspace:*",
     "@microsoft/api-extractor": "catalog:",
     "@rspack/core": "catalog:rspack",
     "css-loader": "^7.1.2",
@@ -48,7 +49,7 @@
     "webpack": "^5.98.0"
   },
   "peerDependencies": {
-    "@rspack/core": "^1.0.0"
+    "@rspack/core": "^1.3.0"
   },
   "engines": {
     "node": ">=18"
