--- a/packages/rspeedy/plugin-qrcode/turbo.json
+++ b/packages/rspeedy/plugin-qrcode/turbo.json
@@ -5,7 +5,9 @@
   ],
   "tasks": {
     "build": {
-      "dependsOn": [],
+      "dependsOn": [
+        "^build"
+      ],
       "inputs": [
         "src"
       ],
