--- a/packages/rspeedy/core/package.json
+++ b/packages/rspeedy/core/package.json
@@ -67,15 +67,17 @@
     "javascript-stringify": "^2.1.0",
     "picocolors": "^1.1.1",
     "tiny-invariant": "^1.3.3",
-    "ts-blank-space": "^0.6.1",
-    "typia": "8.1.1"
+    "ts-blank-space": "^0.6.1"
   },
   "devDependencies": {
     "@lynx-js/vitest-setup": "workspace:*",
     "@rollup/plugin-typescript": "^12.1.2",
     "@rsbuild/webpack": "catalog:rsbuild",
+    "@samchon/openapi": "3.2.3",
     "eventemitter3": "^5.0.1",
     "type-fest": "^4.38.0",
+    "typia": "8.1.1",
+    "typia-rspack-plugin": "2.0.0",
     "vitest": "^3.0.9",
     "webpack": "^5.98.0"
   },
