fix: add GITHUB_TOKEN

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -135,6 +135,12 @@ jobs:
   test-publish:
     needs: build
     uses: ./.github/workflows/workflow-test.yml
+    permissions:
+      contents: read
+      pull-requests: read
+      statuses: read
+    secrets:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     with:
       runs-on: lynx-ubuntu-24.04-medium
       run: |
