--- a/packages/rspeedy/core/package.json
+++ b/packages/rspeedy/core/package.json
@@ -48,6 +48,7 @@
   "scripts": {
     "api-extractor": "api-extractor run --verbose",
     "build": "rslib build",
+    "prepublishOnly": "rslib build",
     "test": "pnpm -w run test --project rspeedy",
     "test:type": "vitest --typecheck.only"
   },
