chore: add test-publish to Done

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -209,6 +209,7 @@ jobs:
       - code-style-check
       - playwright-linux
       - test-plugins
+      - test-publish
       - test-react
       - test-rust
       - test-rspeedy
