--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -144,6 +144,7 @@ jobs:
       run: |
         pnpm dlx @pnpm/registry-mock prepare
         pnpm dlx @pnpm/registry-mock &
+        printf '\nhttp://localhost:4873/:_authToken="this-is-a-fake-token"' >> ~/.npmrc
         pnpm changeset version --snapshot regression
         node packages/tools/canary-release/snapshot.js
         pnpm --recursive publish --no-git-checks --access public --registry=http://localhost:4873
