--- a/packages/rspeedy/create-rspeedy/template-react-ts/tsconfig.json
+++ b/packages/rspeedy/create-rspeedy/template-react-ts/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "jsx": "preserve",
+    "jsx": "react-jsx",
 
     "module": "node16",
     "moduleResolution": "node16",
