--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -22,10 +22,10 @@ jobs:
         id: merge-base
         env:
           BASE_REF: ${{ github.event.pull_request.base.ref || github.event.merge_group.base_sha }}
-          HEAD_REF: ${{ github.event.pull_request.head_sha || github.event.merge_group.head_sha }}
+          HEAD_SHA: ${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }}
         run: |
           git fetch origin ${{ env.BASE_REF }}
-          echo "merge-base=$(git merge-base --fork-point ${{ env.HEAD_REF }} origin/${{ env.BASE_REF }} || '')" >> $GITHUB_OUTPUT
+          echo "merge-base=$(git merge-base --fork-point ${{ env.HEAD_SHA }} origin/${{ env.BASE_REF }} || '')" >> $GITHUB_OUTPUT
       - name: TurboCache
         uses: lynx-infra/cache@558d7c999f9f97ac02ed7e711503bb81d82ff8ee
         with:
