--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -18,33 +18,15 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: "22"
-      - name: Get pull request head SHA
-        uses: actions/github-script@v7
-        if: github.event_name == 'pull_request' && github.event.pull_request.head.sha == ''
-        id: head-sha
-        with:
-          result-encoding: string
-          script: |
-            const { owner, repo } = context.repo;
-            const prNumber = context.payload.pull_request.number;
-            const { data: pullRequest } = await github.rest.pulls.get({
-              owner,
-              repo,
-              pull_number: prNumber
-            });
-            return pullRequest.head.sha;
       - name: Get merge base
         id: merge-base
         env:
           BASE_SHA: ${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha }}
           BASE_REF: ${{ github.event.pull_request.base.ref || github.event.merge_group.base_ref }}
-          HEAD_SHA: ${{ github.event.pull_request.head.sha || steps.head-sha.outputs.result || github.event.merge_group.head_sha }}
+          HEAD_SHA: ${{ github.event.pull_request.head.sha || github.event.merge_group.head_sha }}
         run: |
           git fetch origin ${{ env.BASE_REF }}
-          git rev-parse --verify ${{ env.HEAD_SHA }}
-          git rev-parse --verify origin/${{ env.BASE_REF }}
-          git merge-base --fork-point origin/${{ env.BASE_REF }} ${{ env.HEAD_SHA }}
-          echo "merge-base=$(git merge-base --fork-point origin/${{ env.BASE_REF }} ${{ env.HEAD_SHA }} || echo ${{ env.BASE_SHA }})" >> $GITHUB_OUTPUT
+          echo "merge-base=$(git merge-base origin/${{ env.BASE_REF }} ${{ env.HEAD_SHA }} || echo ${{ env.BASE_SHA }})" >> $GITHUB_OUTPUT
       - name: TurboCache
         uses: lynx-infra/cache@558d7c999f9f97ac02ed7e711503bb81d82ff8ee
         with:
