--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ env.HEAD_REF }}
+          repository: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
       # Modified from https://github.com/rmacklin/fetch-through-merge-base
       - name: Fetch
         run: |
