--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -66,6 +66,15 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         continue-on-error: true
+      - name: Upload turbo summary
+        if: steps.build.outcome == 'failure'
+        uses: actions/upload-artifact@v4
+        with:
+          name: turbo-summary-${{ github.ref }}
+          path: .turbo/runs/*.json
+          retention-days: 1
+          overwrite: true
+          include-hidden-files: true
       - name: Setup Rust and retry build if failed
         if: steps.build.outcome == 'failure'
         uses: actions-rust-lang/setup-rust-toolchain@v1
