--- a/.github/workflows/workflow-build.yml
+++ b/.github/workflows/workflow-build.yml
@@ -49,8 +49,12 @@ jobs:
           key: turbo-v3-${{ hashFiles('**/packages/**/src/**/*.rs') }}-${{ github.sha }}
           # We can restore caches from
           #   1. Runs in the same PR
-          #   2. Previous PRs
+          #   2. Previous commit from base branch
+          #     2.1 Use the merge base
+          #     2.2 Use the base SHA
+          #   3. Any cache
           restore-keys: |
+            turbo-pull-request-${{ github.event.pull_request.number || 'non-exists' }}
             turbo-v3-${{ hashFiles('**/packages/**/src/**/*.rs') }}-${{ needs.get-merge-base.outputs.merge-base }}
             turbo-v3-${{ hashFiles('**/packages/**/src/**/*.rs') }}-${{ github.event.pull_request.base.sha || github.event.merge_group.base_sha || github.event.push.before }}
             turbo-v3-${{ hashFiles('**/packages/**/src/**/*.rs') }}-
@@ -66,15 +70,6 @@ jobs:
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         continue-on-error: true
-      - name: Upload turbo summary
-        if: steps.build.outcome == 'failure'
-        uses: actions/upload-artifact@v4
-        with:
-          name: turbo-summary-${{ github.sha }}
-          path: .turbo/runs/*.json
-          retention-days: 1
-          overwrite: true
-          include-hidden-files: true
       - name: Setup Rust and retry build if failed
         if: steps.build.outcome == 'failure'
         uses: actions-rust-lang/setup-rust-toolchain@v1
@@ -87,12 +82,9 @@ jobs:
           pnpm turbo build --summarize
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      - name: Upload turbo summary
-        if: steps.build.outcome == 'failure'
-        uses: actions/upload-artifact@v4
+      - name: Save turbo cache
+        if: github.event_name == 'pull_request'
+        uses: lynx-infra/cache/save@558d7c999f9f97ac02ed7e711503bb81d82ff8ee
         with:
-          name: turbo-summary-retry-${{ github.sha }}
-          path: .turbo/runs/*.json
-          retention-days: 1
-          overwrite: true
-          include-hidden-files: true
+          path: .turbo
+          key: turbo-pull-request-${{ github.event.pull_request.number }}
