--- a/packages/rspeedy/create-rspeedy/template-react-ts/tsconfig.json
+++ b/packages/rspeedy/create-rspeedy/template-react-ts/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
-
+    "jsxImportSource": "@lynx-js/react",
     "module": "node16",
     "moduleResolution": "node16",
 
